fixed blurry rendering on firefox

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,7 @@ dt, dd {
 
 .playerAvatar {
 	image-rendering: pixelated;
+	image-rendering: -moz-crisp-edges;
 	position: relative;
 	top: 0	;
 	left: -5px;
@@ -69,6 +70,7 @@ dt, dd {
 
 .playerPetCat, .playerPetDog {
 	image-rendering: pixelated;
+	image-rendering: -moz-crisp-edges;
 	width: 100px;
 }
 
@@ -105,6 +107,7 @@ dt, dd {
 
 .headimg {
 	image-rendering: pixelated;
+	image-rendering: -moz-crisp-edges;
 	height: 85%;
 	position: absolute;
 	left: 0%;
@@ -129,6 +132,7 @@ dt, dd {
 
 .logo {
 	image-rendering: pixelated;
+	image-rendering: -moz-crisp-edges;
 	width: 120px;
 	height: auto;
 }
